# memcache

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
config/: mmc-local.conf  mmc-meta.conf
doc/: KV.md  README.md  SECURITYNOTE.md  build.md  mamcache_c++_api.md  mamcache_c_api.md  mamcached_api.md  memcache_config.md  memcache_metaservice_HA.md  memcache_python_api.md  memcache_restful_api.md  memcache_ssd_usage.md  memcached_config.md  pythonAPI.md
doc/zh/: Config.md  K8S环境中MetaService主备高可用验证流程.md  MMC_API.md  memcache.md  memcache_api.md  memcache_metaservice_HA.md  memfabric_hybrid.md  smem_api.md  使用说明.md
example/: examples.md
example/AllReduce/: README.md  shm_all_reduce.cpp
example/BmCall/: main.cpp
example/ShiftPutGet/: README.md  shm_all_shift.cpp
example/benchmark/: README.md  bench_start.sh  bench_start_meta.sh  mooncake_store.py  mutil_process.py  run_mutil_process.py  start_meta_service.py
example/cpp/: CMakeLists.txt  README.md  memcache_cpp_test.cpp
example/decrypt/: decrypt_example.cpp
example/mmc_benchmark/: README.md  kill_all.sh  mooncake_mutil_process.py  mooncake_store.py  mutil_process.py  read_mutil_process.py  read_start.sh  server_start.sh  status_file_manager.py  write_mutil_process.py  write_start.sh
example/python/: README.md  interactive_app.py  test_mmc_batch.py  test_mmc_demo.py  test_mmc_layers.py  test_mmc_layers_batch.py  test_mmc_meta_service.py  test_mmc_start_meta_service_and_simple_test.py
pre-commit/: README.md  pyproject.toml
script/: README.md  build.sh  build_and_pack_run.sh  ci-pre-commit-pr.sh  mmc.conf  performance_compare.sh  run_fuzz.sh  run_ut.sh
script/certs/: generate_client_cert.py  generate_crl.py  generate_server_cert.py
script/k8s_deploy/: account-role-demo.yaml  local-pods-demo.yaml  meta-cluster-ip-demo.yaml  (+2 more)
src/: CMakeLists.txt
src/memcache/csrc/daemon/: CMakeLists.txt  mmc_daemon.cpp
src/smem/csrc/config_store/: CMakeLists.txt  config_store_log.h  smem_config_store.h  smem_message_packer.cpp  smem_message_packer.h  smem_prefix_config_store.h  smem_store_factory.cpp  smem_store_factory.h  smem_tcp_config_store.cpp  smem_tcp_config_store.h  smem_tcp_config_store_server.cpp  smem_tcp_config_store_server.h  smem_tcp_config_store_ssl_helper.h
src/util/csrc/htracer/: CMakeLists.txt  htracer.h  htracer_def.h
src/util/csrc/htracer/common/: htracer_info.h  htracer_monotonic.h  htracer_utils.h
src/util/csrc/htracer/manager/: htracer_manager.h
src/util/csrc/htracer/service/: htracer.cpp  htracer_service.cpp  htracer_service.h
test/: CMakeLists.txt
test/example/bm/BmBenchmark/: main.cpp
test/example/bm/BmCpp/: CMakeLists.txt  barrier_util.h  build_bm_cpp_test.sh  main.cpp
test/example/bm/BmPython/: smem_bm_example.py
test/example/cpp/: README.md
test/example/memcache_cpp_test/: memcache_cpp_test.cpp
test/example/python/: README.md
test/example/trans/demo/: README.md
test/example/trans/perf/: README.md  transfer_perf.cpp
test/fuzz/memcache/: CMakeLists.txt  memcache_client_test.cpp  memcache_fuzz_common.h  memcache_service_test.cpp  memcache_stubs.cpp  memcache_stubs.h  memcache_test.cpp
test/k8s_deploy/: README.md  account-role-demo.yaml  local-pods-demo.yaml  meta-cluster-ip-demo.yaml  meta-pods-demo.yaml
test/python/memcache/: test_mmc_demo.py
test/python/memcache/ha/: mmc-local-test.py  test-mmc-meta-ha.py
test/python/memcache/mock_server/: layers_test.py  server.py  test_case_batch_get.py  test_case_batch_put.py  test_case_batch_put_get.py  test_case_common.py  test_case_get_key_info.py  test_case_layers.py  test_case_put_consistency.py  test_case_put_evict.py  test_case_put_get.py  test_case_put_get_and_batch.py
test/python/memcache/mock_server/mutil_process/: host_rdma_mutil_process.py  mooncake_mutil_process.py  mooncake_store.py  mutil_process.py  read_mutil_process.py  read_start.sh  write_mutil_process.py  write_start.sh
test/python/memcache/mock_server/smem_bm/: smem_bm_server.py
test/ut/: CMakeLists.txt  ut_main.cpp
test/ut/mock/: CMakeLists.txt
test/ut/mock/cann/: CMakeLists.txt  acl_stub.cpp  hal_stub.cpp
test/ut/mock/dfc/: CMakeLists.txt  mock_dfc_api.cpp
test/ut/stub/: hybm_stub.cpp
test/ut/testcase/: smem_test.cpp  store_test.cpp  ut_barrier_util.h
test/ut/testcase/memcache/csrc/: CMakeLists.txt
test/ut/testcase/memcache/csrc/common/: CMakeLists.txt  test_functions.cpp  test_ip_validator.cpp  test_local_config_utils.cpp  test_locks.cpp  test_thread_pool.cpp
test/ut/testcase/memcache/csrc/config/: CMakeLists.txt  test_mmc_configuration.cpp
test/ut/testcase/memcache/csrc/entities/: CMakeLists.txt  test_lookup_map.cpp
test/ut/testcase/memcache/csrc/local_service/: CMakeLists.txt  test_local_handler.cpp  test_mmcache_store.cpp
test/ut/testcase/memcache/csrc/log/: CMakeLists.txt  test_log.cpp
test/ut/testcase/memcache/csrc/meta_service/: CMakeLists.txt  bm_init.cpp  bm_proxy.cpp  global_allocator.cpp  global_allocator_thread.cpp  meta_service_error.cpp  meta_service_net.cpp  mmc_meta_service_http_test.cpp  mock_smem.cpp  mock_smem_bm.cpp  service_interface.cpp  test_bm_init.cpp  test_bm_proxy.cpp  test_global_allocator.cpp  test_global_allocator_thread.cpp  test_meta_container_lru.cpp  test_meta_manager.cpp  test_meta_service_net.cpp  test_service_interface.cpp  test_ubs_io_enabled.cpp
test/ut/testcase/memcache/csrc/net/: CMakeLists.txt  net_engine.cpp
test/ut/testcase/memcache/csrc/proto/: mmc_msg_packer_test.cpp
test/ut/testcase/memcache/csrc/under_api/: CMakeLists.txt
test/ut/testcase/memcache/csrc/under_api/mf_smem/: mf_smem_api_test.cpp
test/ut/testcase/memcache/csrc/under_api/ubs_io/: CMakeLists.txt  test_ubs_io_proxy.cpp
test/ut/testcase/memcache/include/: ut_ptracer.h
test/ut/testcase/shmem_wrapper/: shem_wrapper_test.cpp  shm_functions.h  shm_out_logger.h  smem_shm_api.cpp  smem_shm_api.h
test/ut/testcase/smem/common/: smem_last_error_test.cpp  smem_monotonic_test.cpp
test/ut/testcase/utils/: mf_file_util_test.cpp  mf_num_util_test.cpp
(+399 files in other folders)
